--- a/web_personal/templates/contact.html
+++ b/web_personal/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Contacto{% endblock %}
+
 {% block content %}    
     <!-- Cabecera -->
     <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
