--- a/web_personal/templates/portfolio.html
+++ b/web_personal/templates/portfolio.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Portfolio{% endblock %}
+
 {% block content %}
 	    <!-- Cabecera -->
 	    <header class="masthead" style="background-image: url('img/portfolio-bg.jpg')">
