Generando bloques de header

--- a/web_personal/templates/index.html
+++ b/web_personal/templates/index.html
@@ -2,20 +2,10 @@
 
 {% block title %}Home{% endblock %}
 
+{% block header_img %}{{ url_for('static', filename='img/home-bg.jpg') }}{% endblock %}
+{% block header_title %}Francisco López{% endblock %}
+{% block header_sub %}Maestro en Sistemas{% endblock %}
+
 {% block content %}
-    <!-- Cabecera -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-              <h1>Juan Pérez</h1>
-              <span class="subheading">Ingeniero Industrial</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
 
 {% endblock %}
