--- a/web_personal/templates/auth/login.html
+++ b/web_personal/templates/auth/login.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="container">
         <h2>Login Form</h2>
-        <form class="mt-3" action="{{ url_for('welcome') }}">
+        <form class="mt-3" action="{{ url_for('welcome') }}" method="post">
             <div class="form-group">
               <label for="mail">Correo</label>
               <input type="email" class="form-control" id="mail" name="mail" aria-describedby="emailHelp">
@@ -19,6 +19,7 @@
               <input type="password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
+            <a href="{{ url_for('register') }}" class="btn btn-secondary">Registrarse</a>
         </form>
     </div>
 {% endblock %}
