--- a/web_personal/templates/auth/login.html
+++ b/web_personal/templates/auth/login.html
@@ -9,16 +9,19 @@
     <div class="container">
         <h2>Login Form</h2>
         <form class="mt-3" action="{{ url_for('welcome') }}" method="post">
+            {{ form.hidden_tag() }}
+            <!-- Username -->
             <div class="form-group">
-              <label for="mail">Correo</label>
-              <input type="email" class="form-control" id="mail" name="mail" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              {{ form.username.label }}
+              {{ form.username(class="form-control") }}
             </div>
+            <!-- Password -->
             <div class="form-group">
-              <label for="password">Contraseña</label>
-              <input type="password" class="form-control" id="password" name="password">
+              {{ form.password.label }}
+              {{ form.password(class="form-control") }}
             </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <!-- Submit -->
+            {{ form.submit(class="btn btn-primary") }}
             <a href="{{ url_for('register') }}" class="btn btn-secondary">Registrarse</a>
         </form>
     </div>
