--- a/web_personal/templates/admin/index.html
+++ b/web_personal/templates/admin/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
     <h1>Bienvenido</h1>
-    <h2>{{ user_access.email }}</h2>
+    <h2>{{ email }}</h2>
 {% endblock %}
-    
