--- a/web_personal/templates/auth/login.html
+++ b/web_personal/templates/auth/login.html
@@ -8,12 +8,12 @@
 {% block content %}
     <div class="container">
         <h2>Login Form</h2>
-        <form class="mt-3" action="{{ url_for('welcome') }}" method="post">
+        <form class="mt-3" method="post">
             {{ form.hidden_tag() }}
             <!-- Username -->
             <div class="form-group">
-              {{ form.username.label }}
-              {{ form.username(class="form-control") }}
+              {{ form.email.label }}
+              {{ form.email(class="form-control") }}
             </div>
             <!-- Password -->
             <div class="form-group">
