--- a/web_personal/templates/auth/login.html
+++ b/web_personal/templates/auth/login.html
@@ -22,7 +22,7 @@
             </div>
             <!-- Submit -->
             {{ form.submit(class="btn btn-primary") }}
-            <a href="{{ url_for('register') }}" class="btn btn-secondary">Registrarse</a>
+            <a href="{{ url_for('auth.register') }}" class="btn btn-secondary">Registrarse</a>
         </form>
     </div>
 {% endblock %}
