--- a/web_personal/templates/auth/register.html
+++ b/web_personal/templates/auth/register.html
@@ -39,7 +39,7 @@
             {{ form.gender(class="custom-select") }}
         </div>
         {{ form.submit(class="btn btn-primary") }}
-        <a type="button" class="btn btn-secondary" href="{{ url_for('login') }}">Login</a>
+        <a type="button" class="btn btn-secondary" href="{{ url_for('auth.login') }}">Login</a>
     </form>
 </div>
 {% endblock %}
