--- a/web_personal/templates/project/new.html
+++ b/web_personal/templates/project/new.html
@@ -3,3 +3,28 @@
 {% block title %}New Project{% endblock %}
 
 {% block header_title %}New Project{% endblock %}
+
+{% block content %}
+<div class="container">
+    <form method="post">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            {{ form.name.label }}
+            {{ form.name(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.description.label }}
+            {{ form.description(class='form-control', rows="5") }}
+        </div>
+        <div class="form-group">        
+            {{ form.url.label }}
+            {{ form.url(class="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.image(class="form-control-file") }}
+        </div>
+        <br>
+        {{ form.submit(class="btn btn-success") }}
+    </form>
+</div>
+{% endblock %}
