Implementando la subida de archivos

--- a/web_personal/templates/project/new.html
+++ b/web_personal/templates/project/new.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container">
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.name.label }}
