--- a/web_personal/templates/project/new.html
+++ b/web_personal/templates/project/new.html
@@ -25,6 +25,7 @@
         </div>
         <br>
         {{ form.submit(class="btn btn-success") }}
+        <a href="{{ url_for('project.list') }}" class="btn btn-secondary">Regresar</a>
     </form>
 </div>
 {% endblock %}
