--- a/web_personal/templates/project/new.html
+++ b/web_personal/templates/project/new.html
@@ -11,17 +11,37 @@
         <div class="form-group">
             {{ form.name.label }}
             {{ form.name(class="form-control") }}
+            {% if form.name.errors %}
+                {% for error in form.name.errors %}
+                <p class="text-danger">{{ error }}</p>      
+                {% endfor %}          
+            {% endif %}
         </div>
         <div class="form-group">
             {{ form.description.label }}
             {{ form.description(class='form-control', rows="5") }}
+            {% if form.description.errors %}
+                {% for error in form.description.errors %}
+                <p class="text-danger">{{ error }}</p>      
+                {% endfor %}          
+            {% endif %}
         </div>
         <div class="form-group">        
             {{ form.url.label }}
             {{ form.url(class="form-control") }}
+            {% if form.url.errors %}
+                {% for error in form.url.errors %}
+                <p class="text-danger">{{ error }}</p>      
+                {% endfor %}          
+            {% endif %}
         </div>
         <div class="form-group">
             {{ form.image(class="form-control-file") }}
+            {% if form.image.errors %}
+                {% for error in form.image.errors %}
+                <p class="text-danger">{{ error }}</p>      
+                {% endfor %}          
+            {% endif %}
         </div>
         <br>
         {{ form.submit(class="btn btn-success") }}
