Consulta y muestra de Project en Edit

--- a/web_personal/templates/project/new.html
+++ b/web_personal/templates/project/new.html
@@ -35,6 +35,9 @@
                 {% endfor %}          
             {% endif %}
         </div>
+        {% if image %}
+        <p>{{ image }}</p>
+        {% endif %}
         <div class="form-group">
             {{ form.image(class="form-control-file") }}
             {% if form.image.errors %}
