--- a/web_personal/templates/project/list.html
+++ b/web_personal/templates/project/list.html
@@ -31,7 +31,7 @@
                   <td>{{ project.name }}</td>
                   <td>{{ project.description }}</td>
                   <td>
-                      <button class="btn btn-warning">Edit</button>
+                      <a href="{{ url_for('project.edit', project_id=project.id) }}" class="btn btn-warning">Edit</a>
                       <button class="btn btn-danger">Eliminar</button>
                   </td>
                 </tr>    
