--- a/web_personal/templates/project/list.html
+++ b/web_personal/templates/project/list.html
@@ -27,12 +27,16 @@
             <tbody>
                 {% for project in projects %}
                 <tr>
-                  <th scope="row">{{ project.id }}</th>
+                  <th scope="row"><a href="{{ url_for('project.show', project_id=project.id) }}">{{ project.id }}</a></th>
                   <td>{{ project.name }}</td>
                   <td>{{ project.description }}</td>
                   <td>
                       <a href="{{ url_for('project.edit', project_id=project.id) }}" class="btn btn-warning">Edit</a>
-                      <button class="btn btn-danger">Eliminar</button>
+                      <form action="{{ url_for('project.delete', project_id=project.id) }}" method="POST">
+                        <input type="submit" value="Delete Post"
+                                class="btn btn-danger btn-sm"
+                                onclick="return confirm('Are you sure you want to delete this project?')">
+                      </form>
                   </td>
                 </tr>    
                 {% endfor %}
