Validacion de Password y Confirm Password

--- a/web_personal/templates/auth/login.html
+++ b/web_personal/templates/auth/login.html
@@ -12,8 +12,8 @@
             {{ form.hidden_tag() }}
             <!-- Username -->
             <div class="form-group">
-              {{ form.email.label }}
-              {{ form.email(class="form-control") }}
+              {{ form.username.label }}
+              {{ form.username(class="form-control") }}
             </div>
             <!-- Password -->
             <div class="form-group">
